# ags-example

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.json
src/: lib.rs  main.rs
src/resources/: ags.csv
src/resources/assets/: script.js  style.css
src/resources/templates/: index.html
web/: script.js
