[package]
name = "ags-example"
version = "0.1.0"
edition = "2021"
authors = ["Paul-Christian Volkmer <code@pcvolkmer.de>"]
license = "AGPL-3"

[dependencies]
axum = { version = "0.7" }
askama = { version = "0.12" }
askama_axum = { version = "0.4" }
tokio = { version = "1.38", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
csv = { version = "1.3" }

